--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">BuitinFtp Demo</string>
+    <string name="app_name">Hx Ftp Server</string>
+    <string name="copyUrl">Copy url</string>
 </resources>
