Show the listening address and port

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">太极FTP服务器</string>
     <string name="copyUrl">复制地址</string>
+    <string name="availableSpace">可用空间：</string>
 </resources>
