--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Hx Ftp Server</string>
     <string name="copyUrl">Copy url</string>
-</resources>
+<string name="availableSpace">Available space: </string>
+    </resources>
