--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">Hx Ftp Server</string>
-    <string name="copyUrl">Copy url</string>
-<string name="availableSpace">Available space: </string>
-    </resources>
+  <string name="app_name">Hx Ftp Server</string>
+  <string name="copyUrl">Copy url</string>
+  <string name="availableSpace">Available space: </string>
+  <string name="downloadFinished">Download finished</string>
+</resources>
