--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
   <string name="copyUrl">Copy url</string>
   <string name="availableSpace">Available space: </string>
   <string name="downloadFinished">Download finished</string>
+  <string name="allowUnsafeDeletei">Allow unsafe delete</string>
 </resources>
