--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -3,6 +3,7 @@
   <string name="copyUrl">复制地址</string>
   <string name="availableSpace">可用空间：</string>
   <string name="downloadFinished">文件下载完毕</string>
+  <string name="ipChanged">IP变化</string>
   <string name="allowUnsafeDeletei">允许非安全删除</string>
   <string name="allowAnonymousetei">允许匿名访问</string>
   <string name="userNamee">用户名：</string>
