--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,18 +25,15 @@
   <string name="applicationIcon">Application Icon</string>
   <string name="needExternalStorageManagerPermission">We need the special permission "Manage all files" to work properly. If you would like to grant that permission, please press the button below, it would lead you to a system settings page. You can grant the actual permission on that page.</string>
   <string name="grantPermission">Grant permission</string>
-    <string name="builtinShortcuts">Builtin shortcuts</string>
-    <string name="sayToMeAppName">Say to me:\"%1$s\"</string>
-    <string name="appNamePrompt">Messages</string>
+  <string name="controlConnectionEndedUnexpectedlyged">Control connection ended unexpectedly</string>
+  <string name="sayToMeAppName">Say to me:\"%1$s\"</string>
+  <string name="appNamePrompt">Messages</string>
   <string name="myAccount">My account</string>
   <string name="freeCredit">Current root directory:</string>
   <string name="paidCredit">Paid speech credit</string>
     <string name="applicationAlias">Application alias</string>
     <string name="pleaseSetHxLauncherAsTheDefaultLauncher">Please set HxLauncher as the default launcher.</string>
   <string name="applicationFrequency">Application frequency</string>
-
-
-
   <string name="grantManageAllFilesPermission">Grant manage all files permission</string>
   <string name="stopWeb">Stop</string>
   <string name="forwardWeb">Forward</string>
@@ -48,7 +45,7 @@
   <string name="about_info_coverage">Coverage</string>
   <string name="unlink_not_right">Not right</string>
   <string name="about_help_feedback_title">Help And Feedback</string>
-  <string name="login_in">Login</string>
+  <string name="urlCopiedged">Url copied</string>
   <string name="login_login_button">Login</string>
   <string name="loginout_loginout_button">Log Out</string>
   <string name="button_ok">OK</string>
